Refactor and update sprong boot controllers